--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_fonts: ^4.0.3
   get_storage: ^2.0.3
   dropdown_search: ^5.0.5
+  file_picker: ^5.2.5
+  flutter_chat_bubble: ^2.0.2
 
 flutter_icons:
   android: "launcher_icon"
